--- a/index.html
+++ b/index.html
@@ -142,6 +142,58 @@
         transition: max-height 0.3s ease-out;
       }
 
+      .pronunciation-wrap {
+        display: inline-flex;
+        align-items: center;
+        position: relative;
+      }
+
+      .pronunciation-btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+        border-radius: 25px;
+        transition: all 0.3s ease;
+        background-color: rgba(41, 128, 185, 0.1);
+        color: #2980b9;
+      }
+
+      .pronunciation-btn:hover {
+        background-color: rgba(41, 128, 185, 0.2);
+        transform: translateY(-1px);
+      }
+
+      .pronunciation-btn:active {
+        transform: translateY(0);
+      }
+
+      .speaker-icon {
+        width: 20px;
+        height: 20px;
+        fill: currentColor;
+      }
+
+      .pronunciation-text {
+        font-size: 0.9rem;
+        font-weight: 500;
+      }
+
+      .loading-indicator {
+        display: none;
+        width: 1.2rem;
+        height: 1.2rem;
+        border: 3px solid #ddd;
+        border-top-color: #2980b9;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        position: absolute;
+        right: -1.5rem;
+      }
+
       /* 响应式设计 */
       @media (max-width: 768px) {
         .timeline-line {
