--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
         --primary-dark: #d16256; /* 加深10% */
         --primary-light: #f8d8d5; /* 浅色背景 */
 
-        /* 辅助色 */
-        --secondary: #6c9a8f; /* 灰绿色 */
-        --secondary-dark: #5a8278;
-
         /* 强调色 */
         --accent: #4a7b9d; /* 深蓝色 */
 
@@ -93,10 +89,10 @@
         top: 24px;
         width: 16px;
         height: 16px;
-        background: var(--secondary);
+        background: var(--primary);
         border: 3px solid white;
         border-radius: 50%;
-        box-shadow: 0 0 0 2px var(--secondary);
+        box-shadow: 0 0 0 2px var(--primary);
       }
 
       /* 卡片式布局 */
