--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         top: 0;
         bottom: 0;
         width: 2px;
-        background: var(--secondary);
+        background: var(--primary);
         z-index: 0;
       }
 
