--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
       }
 
+      .text-secondary {
+        color: var(--gray) !important;
+        font-size: 0.9em;
+        line-height: 1.6;
+        transition: color 0.3s ease;
+      }
+
       /* Timeline */
       .timeline-container {
         position: relative;
