--- a/index.html
+++ b/index.html
@@ -385,36 +385,19 @@
             <div class="timeline-item card">
               <h3>Imperial College London</h3>
               <p class="text-secondary">Sep. 2023 - Jun. 2025 (Expected)</p>
-              <p>M.Sc. in Physics with Extended Research</p>
+              <p>
+                M.Sc. in Physics with Extended Research, advised by Dr. John
+                Michniewicz
+              </p>
             </div>
 
             <div class="timeline-item card">
               <h3>Huazhong University of Science and Technology</h3>
               <p class="text-secondary">Sep. 2018 - Jun. 2022</p>
-              <p>B.S. in Physics</p>
+              <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
             </div>
           </section>
 
-          <section>
-            <header>
-              <h3>Education</h3>
-            </header>
-            <ul>
-              <li>
-                <strong>Imperial College London</strong><br />
-                <i>Sep. 2023 - Jun. 2025 (Expected)</i><br />
-                M.Sc. in Physics with Extended Research, advised by Dr. John
-                Michniewicz
-              </li>
-              <br />
-              <li>
-                <strong>Huazhong University of Science and Technology</strong
-                ><br />
-                <i>Sep. 2018 - Jun. 2022</i><br />
-                B.S. in Physics, advised by Prof. Jianming Cai
-              </li>
-            </ul>
-          </section>
           <section id="research">
             <header>
               <h3>Research Experience</h3>
