--- a/index.html
+++ b/index.html
@@ -381,6 +381,9 @@
             </p>
           </article>
           <section class="timeline-container" id="education">
+            <header>
+              <h3>Education</h3>
+            </header>
             <div class="timeline-line">
               <div class="timeline-item card">
                 <h3>Imperial College London</h3>
