--- a/index.html
+++ b/index.html
@@ -384,21 +384,20 @@
             <header>
               <h3>Education</h3>
             </header>
-            <div class="timeline-line">
-              <div class="timeline-item card">
-                <h3>Imperial College London</h3>
-                <p class="text-secondary">Sep. 2023 - Jun. 2025 (Expected)</p>
-                <p>
-                  M.Sc. in Physics with Extended Research, advised by Dr. John
-                  Michniewicz
-                </p>
-              </div>
+            <div class="timeline-line">Education</div>
+            <div class="timeline-item card">
+              <h3>Imperial College London</h3>
+              <p class="text-secondary">Sep. 2023 - Jun. 2025 (Expected)</p>
+              <p>
+                M.Sc. in Physics with Extended Research, advised by Dr. John
+                Michniewicz
+              </p>
+            </div>
 
-              <div class="timeline-item card">
-                <h3>Huazhong University of Science and Technology</h3>
-                <p class="text-secondary">Sep. 2018 - Jun. 2022</p>
-                <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
-              </div>
+            <div class="timeline-item card">
+              <h3>Huazhong University of Science and Technology</h3>
+              <p class="text-secondary">Sep. 2018 - Jun. 2022</p>
+              <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
             </div>
           </section>
 
