--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
             <header>
               <h3>Education</h3>
             </header>
+            <div class="timeline-line"></div>
             <div class="timeline-item card">
               <h3>Imperial College London</h3>
               <p class="text-secondary">Sep. 2023 - Jun. 2025 (Expected)</p>
