--- a/index.html
+++ b/index.html
@@ -401,19 +401,20 @@
             </div>
           </section>
 
-          <section id="research">
+          <section class="timeline-container" id="research">
+            <div class="timeline-line"></div>
             <header>
               <h3>Research Experience</h3>
             </header>
-            <ul>
-              <li>
-                <strong
-                  ><a
-                    href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/"
-                    >Quantum Optics and Laser Science (QOLS) Group</a
-                  ></strong
-                >, Imperial College London<br />
-                <i>Jun. 2024 - Present</i><br />
+            <div class="timeline-item card">
+              <h3>
+                <a
+                  href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/"
+                  >Quantum Optics and Laser Science (QOLS) Group</a
+                >, Imperial College London
+              </h3>
+              <p class="text-secondary">Jun. 2024 - Present</p>
+              <p>
                 Under the guidance of Dr. John Michniewicz, I focus on
                 investigating
                 <strong
@@ -430,15 +431,17 @@
                 <strong>developed an automated Python package</strong> to
                 standardize communication protocols across experimental devices,
                 significantly improving the measurement workflow.
-              </li>
-              <br />
-              <li>
-                <strong
-                  ><a href="http://en.baqis.ac.cn/research/groups/?cid=814"
-                    >Quantum Operating System Group</a
-                  ></strong
-                >, Beijing Academy of Quantum Information Sciences (BAQIS)<br />
-                <i>May 2024 - Present</i><br />
+              </p>
+            </div>
+
+            <div class="timeline-item card">
+              <h3>
+                <a href="http://en.baqis.ac.cn/research/groups/?cid=814"
+                  >Quantum Operating System Group</a
+                >, Beijing Academy of Quantum Information Sciences (BAQIS)
+              </h3>
+              <p class="text-secondary">May 2024 - Present</p>
+              <p>
                 As a remote intern at BAQIS, I focus on
                 <strong
                   ><i>compilation for neutral atom quantum computers</i></strong
@@ -452,18 +455,20 @@
                 harnessing the dynamic connectivity and large-scale parallelism
                 of neutral atom platforms, and achieving a
                 <strong>significant increase on fidelity</strong>. This work was
-                published on
+                available on
                 <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
-              </li>
-              <br />
-              <li>
-                <strong
-                  ><a
-                    href="https://research.baidu.com/Research_Areas/index-view?id=75"
-                    >Institute for Quantum Computing</a
-                  ></strong
-                >, Baidu, Inc.<br />
-                <i>Mar. 2023 - Sep. 2023</i><br />
+              </p>
+            </div>
+
+            <div class="timeline-item card">
+              <h3>
+                <a
+                  href="https://research.baidu.com/Research_Areas/index-view?id=75"
+                  >Institute for Quantum Computing</a
+                >, Baidu, Inc.
+              </h3>
+              <p class="text-secondary">Mar. 2023 - Sep. 2023</p>
+              <p>
                 Working under Dr. Jingbo Wang, I developed an
                 <strong
                   ><i
@@ -479,16 +484,18 @@
                 <strong>coding skills</strong>, emphasizing code quality,
                 documentation, and maintainability, ensuring future usability of
                 the developed tools.
-              </li>
-              <br />
-              <li>
-                <strong
-                  ><a href="https://www.iqsqm.com/"
-                    >International Joint Lab on Quantum Sensing and Quantum
-                    Metrology</a
-                  ></strong
-                >, HUST<br />
-                <i>Apr. 2019 - Dec. 2022</i><br />
+              </p>
+            </div>
+
+            <div class="timeline-item card">
+              <h3>
+                <a href="https://www.iqsqm.com/"
+                  >International Joint Lab on Quantum Sensing and Quantum
+                  Metrology</a
+                >, HUST
+              </h3>
+              <p class="text-secondary">Apr. 2019 - Dec. 2022</p>
+              <p>
                 For my graduation project,
                 <strong
                   ><i
@@ -503,15 +510,16 @@
                 Surface Forces Apparatus cavity and conducted finite element
                 analysis using <strong>COMSOL</strong>, achieving strong
                 agreement between analytical results and simulations.
-              </li>
-              <br />
-              <li>
-                <strong
-                  ><a href="https://bradley-lab.weebly.com/"
-                    >Bradley Lab</a
-                  ></strong
-                >, University of Saskatchewan - Saskatoon<br />
-                <i>Jun. 2021 - Oct. 2021</i><br />
+              </p>
+            </div>
+
+            <div class="timeline-item card">
+              <h3>
+                <a href="https://bradley-lab.weebly.com/">Bradley Lab</a>,
+                University of Saskatchewan - Saskatoon
+              </h3>
+              <p class="text-secondary">Jun. 2021 - Oct. 2021</p>
+              <p>
                 As part of the
                 <a
                   href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/"
@@ -531,16 +539,18 @@
                   href="/docs/certificate/certificate-MITACS.pdf"
                   >View Certificate</a
                 >)
-              </li>
-              <br />
-              <li>
-                <strong
-                  ><a href="https://lodiphie.physics.sjtu.edu.cn/"
-                    >Laboratory of Low Dimensional Physics and Interface
-                    Engineering</a
-                  ></strong
-                >, Shanghai Jiao Tong University<br />
-                <i>Jun. 2021 - Sep. 2021</i><br />
+              </p>
+            </div>
+
+            <div class="timeline-item card">
+              <h3>
+                <a href="https://lodiphie.physics.sjtu.edu.cn/"
+                  >Laboratory of Low Dimensional Physics and Interface
+                  Engineering</a
+                >, Shanghai Jiao Tong University
+              </h3>
+              <p class="text-secondary">Jun. 2021 - Sep. 2021</p>
+              <p>
                 During my summer research internship under Prof. Hao Zheng, I
                 conducted an
                 <strong><i>STM study on topological insulators</i></strong
@@ -552,10 +562,10 @@
                 Additionally, I contributed to assembling a
                 <strong>dilution refrigerator</strong>, gaining valuable
                 hands-on experience in advanced experimental techniques.
-              </li>
-              <br />
-            </ul>
+              </p>
+            </div>
           </section>
+
           <section id="awards">
             <header>
               <h3>Awards and Honors</h3>
