--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
                 >
               </li>
               <li>
-                <strong>National Scholarship</strong>, Ministry of Education of
-                China, 2019<br />
+                <strong>China National Scholarship</strong>, Ministry of
+                Education of China, 2019<br />
                 <i
                   >*The highest honor for university students in China, awarded
                   to top 0.2% nationwide.</i
