--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       .timeline-line {
         position: absolute;
         left: -28px;
-        top: 0;
+        top: 20px;
         bottom: 0;
         width: 2px;
         background: var(--primary);
