--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <section class="timeline-container" id="education">
             <div class="timeline-line"></div>
             <header>
-              <h3>Education</h3>
+              <h3 style="font-family: 'Dancing Script'">Education</h3>
             </header>
             <div class="timeline-item card">
               <h3>Imperial College London</h3>
