--- a/index.html
+++ b/index.html
@@ -370,7 +370,11 @@
           <section class="timeline-container" id="education">
             <div class="timeline-line"></div>
             <header>
-              <h3 style="font-family: 'Dancing Script'">Education</h3>
+              <h3>
+                <span style="font-family: 'Dancing Script', serif"
+                  >Education</span
+                >
+              </h3>
             </header>
             <div class="timeline-item card">
               <h3>Imperial College London</h3>
