--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
         right: -1.5rem;
       }
 
+      .custom-title {
+        font-family: "Dancing Script", cursive;
+        font-size: 28px; /* 让它更醒目 */
+        font-weight: bold;
+        color: #1e3a8a;
+      }
+
       /* 响应式设计 */
       @media (max-width: 768px) {
         .timeline-line {
@@ -370,11 +377,7 @@
           <section class="timeline-container" id="education">
             <div class="timeline-line"></div>
             <header>
-              <h3>
-                <span style="font-family: 'Dancing Script', serif"
-                  >Education</span
-                >
-              </h3>
+              <h3 class="custom-title">Education</h3>
             </header>
             <div class="timeline-item card">
               <h3>Imperial College London</h3>
