--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
       }
 
       .custom-title {
-        font-family: "Dancing Script", cursive;
+        font-family: "Dancing Script", "Montserrat", "Source Sans Pro",
+          "Ma Shan Zheng", sans-serif;
         font-size: 28px; /* 让它更醒目 */
         font-weight: bold;
-        color: #1e3a8a;
       }
 
       /* 响应式设计 */
