--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       .timeline-line {
         position: absolute;
         left: 24px;
-        top: 40px;
-        bottom: 0;
+        top: 60px;
+        bottom: 20px;
         width: 2px;
         background: var(--primary);
         z-index: 0;
@@ -187,7 +187,7 @@
       .custom-title {
         font-family: "Dancing Script", "Montserrat", "Source Sans Pro",
           "Ma Shan Zheng", sans-serif;
-        font-size: 28px; /* 让它更醒目 */
+        font-size: 32px; /* 让它更醒目 */
         font-weight: bold;
       }
 
