--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       .timeline-line {
         position: absolute;
         left: 24px;
-        top: 60px;
-        bottom: 20px;
+        top: 100px;
+        bottom: 0;
         width: 2px;
         background: var(--primary);
         z-index: 0;
