--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
           "Ma Shan Zheng", sans-serif;
         font-size: 32px; /* 让它更醒目 */
         font-weight: bold;
+        z-index: 1;
       }
 
       /* 响应式设计 */
