--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
           <section class="timeline-container" id="research">
             <div class="timeline-line"></div>
             <header>
-              <h3>Research Experience</h3>
+              <h3 class="custom-title">Research Experience</h3>
             </header>
             <div class="timeline-item card">
               <h3>
@@ -563,7 +563,7 @@
 
           <section id="awards">
             <header>
-              <h3>Awards and Honors</h3>
+              <h3 class="custom-title">Awards and Honors</h3>
             </header>
             <ul>
               <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023</li>
