--- a/index.html
+++ b/index.html
@@ -410,22 +410,21 @@
               </h3>
               <p class="text-secondary">Jun. 2024 - Present</p>
               <p>
-                Under the guidance of Dr. John Michniewicz, I focus on
-                investigating
+                Under the guidance of Dr. John Michniewicz, I investigate
                 <strong
                   ><i
                     >charge noise in semiconductor spin qubits for quantum
                     computing</i
                   ></strong
-                >. My work includes <strong>wire bonding</strong> quantum
-                devices for characterization and studying the
-                <strong>charge transport</strong> properties of semiconductor
-                quantum dots at cryogenic temperatures using a
-                <strong>dilution refrigerator</strong>. To enhance experimental
-                efficiency, I
-                <strong>developed an automated Python package</strong> to
-                standardize communication protocols across experimental devices,
-                significantly improving the measurement workflow.
+                >. My work involves <strong>wire bonding</strong> quantum
+                devices for characterization and studying
+                <strong>charge transport</strong> in semiconductor quantum dots
+                at cryogenic temperatures using a
+                <strong>dilution refrigerator</strong>. To streamline
+                experiments, I
+                <strong>developed an automated Python package</strong> that
+                standardizes communication across experimental devices,
+                significantly improving measurement efficiency.
               </p>
             </div>
 
@@ -440,16 +439,16 @@
                 As a remote intern at BAQIS, I focus on
                 <strong
                   ><i>compilation for neutral atom quantum computers</i></strong
-                >, a rapidly advancing area of quantum research. In this work, I
-                introduce <strong>ZAP</strong>, a zoned architecture that
+                >, an emerging quantum research field. I introduced
+                <strong>ZAP</strong>, a zoned architecture that
                 <strong
-                  >separates the computational area into distinct storage and
+                  >divides the computational area into distinct storage and
                   entanglement zones</strong
-                >. Through ASAP scheduling and a simulated annealing algorithm,
-                ZAP optimizes qubit placement and movement paths, fully
-                harnessing the dynamic connectivity and large-scale parallelism
-                of neutral atom platforms, and achieving a
-                <strong>significant increase on fidelity</strong>. This work was
+                >. Leveraging ASAP scheduling and a simulated annealing
+                algorithm, ZAP optimizes qubit placement and movement, fully
+                utilizing the dynamic connectivity and large-scale parallelism
+                of neutral atom platforms, leading to a
+                <strong>significant fidelity improvement</strong>. This work is
                 available on
                 <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
               </p>
@@ -464,7 +463,7 @@
               </h3>
               <p class="text-secondary">Mar. 2023 - Sep. 2023</p>
               <p>
-                Working under Dr. Jingbo Wang, I developed an
+                Under Dr. Jingbo Wang, I developed an
                 <strong
                   ><i
                     >automated calibration framework for trapped-ion quantum
@@ -473,12 +472,12 @@
                 >, enabling precise determination of
                 <strong>phonon frequencies</strong> and
                 <strong>Lamb-Dicke parameters</strong>. This Python-based tool
-                reduced manual intervention, improved parameter accuracy, and
-                resulted in <strong>three patents</strong>. The rigorous
-                industrial training at Baidu honed my
-                <strong>coding skills</strong>, emphasizing code quality,
-                documentation, and maintainability, ensuring future usability of
-                the developed tools.
+                minimized manual intervention and enhanced parameter accuracy,
+                leading to <strong>three patents</strong>. My experience at
+                Baidu strengthened my <strong>coding skills</strong>,
+                particularly in code quality, documentation, and
+                maintainability, ensuring the long-term usability of developed
+                tools.
               </p>
             </div>
 
@@ -491,20 +490,20 @@
               </h3>
               <p class="text-secondary">Apr. 2019 - Dec. 2022</p>
               <p>
-                For my graduation project,
+                For my final year project,
                 <strong
                   ><i
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</i
                   ></strong
-                >, I focused on NV center quantum sensing. Combining theoretical
-                calculations with simulations, I derived the
+                >, I studied NV center quantum sensing. Using theoretical
+                calculations and simulations, I derived the
                 <strong
                   >relationship between spin coherence time and ion
                   concentration</strong
                 >. Additionally, I developed a 2D axisymmetric model for a
-                Surface Forces Apparatus cavity and conducted finite element
-                analysis using <strong>COMSOL</strong>, achieving strong
-                agreement between analytical results and simulations.
+                Surface Forces Apparatus cavity and performed finite element
+                analysis using <strong>COMSOL</strong>, demonstrating strong
+                agreement between analytical and simulation results.
               </p>
             </div>
 
@@ -515,21 +514,21 @@
               </h3>
               <p class="text-secondary">Jun. 2021 - Oct. 2021</p>
               <p>
-                As part of the
+                As a participant in the
                 <a
                   href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/"
                 >
-                  MITACS Globalink Research Internship </a
+                  MITACS Globalink Research Internship</a
                 >, I contributed to the project
                 <strong
                   ><i
                     >New Plasma Processing Techniques for Advanced Materials</i
                   ></strong
                 >
-                under the guidance of Prof. Michael Bradley. Due to COVID-19
-                travel restrictions, this work was conducted remotely, where I
-                focused on coding tasks related to plasma motion while gaining
-                insights into
+                under Prof. Michael Bradley. Due to COVID-19 travel
+                restrictions, my work was conducted remotely, focusing on
+                <strong>plasma motion simulations</strong> and coding tasks,
+                while gaining insights into
                 <strong>plasma processing techniques</strong>. (<a
                   href="/docs/certificate/certificate-MITACS.pdf"
                   >View Certificate</a
@@ -549,14 +548,14 @@
                 During my summer research internship under Prof. Hao Zheng, I
                 conducted an
                 <strong><i>STM study on topological insulators</i></strong
-                >. My work included <strong>fabricating STM tips</strong> using
+                >. My work involved <strong>fabricating STM tips</strong> via
                 electrochemical methods, performing
-                <strong>Raman spectroscopy</strong>, learning the working theory
-                of <strong>Molecular Beam Epitaxy (MBE)</strong> and
+                <strong>Raman spectroscopy</strong>, and studying
+                <strong>Molecular Beam Epitaxy (MBE)</strong> and
                 <strong>Scanning Tunneling Microscopy (STM)</strong>.
                 Additionally, I contributed to assembling a
-                <strong>dilution refrigerator</strong>, gaining valuable
-                hands-on experience in advanced experimental techniques.
+                <strong>dilution refrigerator</strong>, gaining hands-on
+                experience with advanced experimental techniques.
               </p>
             </div>
           </section>
