--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       }
 
       .custom-title {
-        font-family: "Dancing Script", "Montserrat", "Source Sans Pro",
+        font-family: "Dancing Script", "EB Garamond", "Source Sans Pro",
           "Ma Shan Zheng", sans-serif;
         font-size: 32px; /* 让它更醒目 */
         font-weight: bold;
