--- a/index.html
+++ b/index.html
@@ -185,10 +185,11 @@
       }
 
       .custom-title {
-        font-family: "Dancing Script", "EB Garamond", "Source Sans Pro",
-          "Ma Shan Zheng", sans-serif;
+        font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng",
+          sans-serif;
         font-size: 32px; /* 让它更醒目 */
-        font-weight: bold;
+        font-style: italic;
+        font-weight: 800;
         z-index: 1;
       }
 
