--- a/index.html
+++ b/index.html
@@ -345,16 +345,16 @@
         <div class="container">
           <article id="main" class="special">
             <p>
-              My given name is <strong>Chen</strong> (晨), which means "dawn" or
+              My given name is <strong>Chen</strong>, which means "dawn" or
               "early morning" in Chinese. This meaning suits me well, as I am a
               morning person who enjoys the calm and peacefulness of the early
               hours. Interestingly, "Chen" is sometimes misheard as "Cheng,"
               which means "orange" in Chinese. Because of this playful
-              similarity, my friends affectionately call me "Cheng-Zi" (橙子),
-              meaning "orange."
+              similarity, my friends affectionately call me "Cheng-Zi", meaning
+              "orange."
             </p>
             <p>
-              My surname is <strong>Huang</strong> (黄), which means "yellow" in
+              My surname is <strong>Huang</strong>, which means "yellow" in
               Chinese. This name has deep historical and cultural roots. It is
               often associated with the
               <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
