--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         top: 80px;
         bottom: 0;
         width: 2px;
-        background: var(--primary);
+        background: var(--primary-dark);
         z-index: 0;
       }
 
