--- a/notes.html
+++ b/notes.html
@@ -114,7 +114,7 @@
               <article id="main">
                 <section id="imperial">
                   <header>
-                    <h3>
+                    <h3 class="custom-title">
                       <a href="#imperial" class="scrolly"
                         >Imperial College London</a
                       >
@@ -268,7 +268,7 @@
                 </section>
                 <section id="hust">
                   <header>
-                    <h3>
+                    <h3 class="custom-title">
                       <a href="#hust" class="scrolly">
                         Huazhong University of Science and Technology</a
                       >
@@ -676,7 +676,7 @@
                 </section>
                 <section id="pku">
                   <header>
-                    <h3>
+                    <h3 class="custom-title">
                       <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
@@ -746,7 +746,7 @@
                 </section>
                 <section id="others">
                   <header>
-                    <h3>
+                    <h3 class="custom-title">
                       <a href="#others" class="scrolly">Self-Study</a>
                     </h3>
                   </header>
