--- a/index.html
+++ b/index.html
@@ -184,7 +184,14 @@
         right: -1.5rem;
       }
 
-      
+      .custom-title {
+        font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng",
+          sans-serif;
+        font-size: 32px; /* 让它更醒目 */
+        font-style: italic;
+        font-weight: 700;
+        z-index: 1;
+      }
 
       /* 响应式设计 */
       @media (max-width: 768px) {
