--- a/notes.html
+++ b/notes.html
@@ -17,6 +17,16 @@
     <noscript
       ><link rel="stylesheet" href="/assets/css/noscript.css"
     /></noscript>
+    <style>
+      .custom-title {
+        font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng",
+          sans-serif;
+        font-size: 32px; /* 让它更醒目 */
+        font-style: italic;
+        font-weight: 700;
+        z-index: 1;
+      }
+    </style>
   </head>
   <body class="left-sidebar is-preload">
     <div id="page-wrapper">
