--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 <a
                   href="https://research.baidu.com/Research_Areas/index-view?id=75"
                   >Institute for Quantum Computing</a
-                >, Baidu, Inc.
+                >, Baidu Research, Baidu, Inc.
               </h3>
               <p class="text-secondary">Mar. 2023 - Sep. 2023</p>
               <p>
