--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         border-radius: 25px;
         transition: all 0.3s ease;
         background-color: rgba(41, 128, 185, 0.1);
-        color: #2980b9;
+        color: var(--primary);
       }
 
       .pronunciation-btn:hover {
@@ -177,7 +177,7 @@
         width: 1.2rem;
         height: 1.2rem;
         border: 3px solid #ddd;
-        border-top-color: #2980b9;
+        border-top-color: var(--primary);
         border-radius: 50%;
         animation: spin 1s linear infinite;
         position: absolute;
@@ -187,7 +187,7 @@
       .custom-title {
         font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng",
           sans-serif;
-        font-size: 32px; /* 让它更醒目 */
+        font-size: 32px;
         font-style: italic;
         font-weight: 700;
         z-index: 1;
