--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="col-9 col-12-mobile imp-mobile" id="content">
               <header>
                 <h2>
-                  👋 Hi, I'm <strong>Chen</strong>
+                  👋 Hi, I'm <strong>Chen</strong>,
                   <div class="pronunciation-wrap">
                     <button
                       class="pronunciation-btn"
